src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Primary_Group_Number__c</fullName>
        <formula>Insurance_Verification__r.Policy_Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Insurance_Company__c</fullName>
        <formula>Insurance_Verification__r.Primary_Insurance_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Insurance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Insurance_Phone__c</fullName>
        <formula>Insurance_Verification__r.Primary_Insurance_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Insurance Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOB Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Member_ID_Number__c</fullName>
        <formula>Insurance_Verification__r.Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Nurse__c</fullName>
        <label>Primary Nurse</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subscriber_Addressfr__c</fullName>
        <formula>Insurance_Verification__r.Subscriber_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Subscriber Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subscriber_Date_of_Birthfr__c</fullName>
        <formula>Insurance_Verification__r.Subscriber_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Subscriber Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Subscriber_Emailfr__c</fullName>
        <formula>Insurance_Verification__r.Subscriber_E_mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Subscriber Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subscriber_Employerf__c</fullName>
        <formula>Insurance_Verification__r.Subscriber_Employer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Subscriber Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subscriber_Namef__c</fullName>
        <formula>Insurance_Verification__r.Subscriber_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Subscriber Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subscriber_Phonefr__c</fullName>
        <formula>Insurance_Verification__r.Subscriber_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Subscriber Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subscriber_Relationship__c</fullName>
        <formula>Insurance_Verification__r.Relationship_to_Subscriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Subscriber Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Therapist__c</fullName>
        <label>Primary Therapist</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_UR__c</fullName>
        <label>Primary UR</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Auth_Req__c</fullName>
        <formula>IF(CONTAINS(&quot;BCBS FEDERAL : FEDERAL : FED : federal bcbs : FEDERAL BLUE CROSS : BCBS FED : Federal BCBS : Federal bcbs : BCBS Federal : Federal : Federal Blue Cross&quot;,  Insurance_Company_Name__c),&quot;Requires Case Management Prior to Admission.&quot;,
IF(CONTAINS(&quot;John Hopkins : John : Hopkins : JOHN HOPKINS HEALTH CARE : JOHN HOPKINS EHP : John Hopkins EHP : John Hopkins Healthcare : John Hopkins Health Care&quot;, Insurance_Company_Name__c),&quot;Requires Same Day Pre-Cert.&quot;,
IF(CONTAINS(&quot;Parkview : Parkview Signature : Signature : PARKVIEW SIGNATURE HEALTHCARE : PARKVIEW SIGNATURE CARE : &quot;, Insurance_Company_Name__c),&quot;Requires Pre-Cert Prior to Admission.&quot;, 
IF(CONTAINS(&quot;UPMC : upmc : UPMC HEALTH PLAN : UPMC Health Plan : upmc&quot;, Insurance_Company_Name__c),&quot;Requires Same Day Pre-Cert for Inpatient.&quot;,
IF(CONTAINS(&quot;CAREFIRST: Carefirst : BCBS MD : BCBS CAREFIRST OF MARYLAND : BCBS CAREFIRST MD : CAREFIRST BCBS : CAREFIRST BCBS MD : BCBS Carefirst : Carefirst BCBS : BCBS Carefirst MD : Carefirst BCBS of Maryland&quot;, Insurance_Company_Name__c),&quot;Requires Pre-Cert Prior to Admission.&quot;,
IF(CONTAINS(&quot;Wellmark : Well mark : WELLMARK BCBS : WELLMARK BCBS DE : WELLMARK : WELLMARK BCBS IA&quot;, Insurance_Company_Name__c),&quot;Psych-Eval Required within 24 hours of Admission &amp; Proof of 24hr Nursing.&quot;,
IF(CONTAINS(&quot;BCBS NC : NORTH CAROLINA : BLUE CROSS BLUE SHIELD NC : BCBS NORTH CAROLINA : BCBS OF NC : bcbs nc : north carolina : blue cross blue shield nc : bcbs north carolina : bcbs of nc : Bcbs Nc : North Carolina : Blue Cross Blue Shield Nc : Bcbs North Carolina : Bcbs Of Nc : BCBS NC : BCBS of NC&quot;, Insurance_Company_Name__c),&quot;Requires Same Day Pre-Cert.&quot;,
&quot; &quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Auth Req</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Auth__c</fullName>
        <formula>CONTAINS(&quot;BCBS FEDERAL : FEDERAL : FED : federal bcbs : FEDERAL BLUE CROSS : BCBS FED : Federal BCBS : Federal bcbs : BCBS Federal : Federal : Federal Blue Cross : John Hopkins : John : Hopkins : JOHN HOPKINS HEALTH CARE : JOHN HOPKINS EHP : John Hopkins EHP : John Hopkins Healthcare : John Hopkins Health Care : Parkview : Parkview Signature : Signature : PARKVIEW SIGNATURE HEALTHCARE : PARKVIEW SIGNATURE CARE : UPMC : upmc : UPMC HEALTH PLAN : UPMC Health Plan : upmc : CAREFIRST: Carefirst : BCBS MD : BCBS CAREFIRST OF MARYLAND : BCBS CAREFIRST MD : CAREFIRST BCBS : CAREFIRST BCBS MD : BCBS Carefirst : Carefirst BCBS : BCBS Carefirst MD : Carefirst BCBS of Maryland : Wellmark : Well mark : WELLMARK BCBS : WELLMARK BCBS DE : WELLMARK : WELLMARK BCBS IA : BCBS NC : NORTH CAROLINA : BLUE CROSS BLUE SHIELD NC : BCBS NORTH CAROLINA : BCBS OF NC : bcbs nc : north carolina : blue cross blue shield nc : bcbs north carolina : bcbs of nc : Bcbs Nc : North Carolina : Blue Cross Blue Shield Nc : Bcbs North Carolina : Bcbs Of Nc : BCBS NC : BCBS of NC&quot;, Insurance_Company_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Auth?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promissory_Cost__c</fullName>
        <label>Promissory Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promissory_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promissory Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Multi-Racial</fullName>
                </value>
                <value>
                    <fullName>Other not listed</fullName>
                </value>
                <value>
                    <fullName>Prefers Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Readmit_Date__c</fullName>
        <label>Readmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Readmit_Discharge_Date__c</fullName>
        <label>Readmit Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Readmit_Facility__c</fullName>
        <label>Readmit Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haven</fullName>
                </value>
                <value>
                    <fullName>TRT</fullName>
                </value>
                <value>
                    <fullName>ICFR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Readmit__c</fullName>
        <label>Allow Readmit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refer_Out_Notes__c</fullName>
        <label>Refer Out Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refer Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referer__c</fullName>
        <label>Referer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Referral Sources</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referral Source)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_UserId__c</fullName>
        <formula>Referral_Source__r.Referral_UserId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Out_To__c</fullName>
        <label>Referred Out To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_To_Marketer__c</fullName>
        <label>Referred To Marketer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alicia Reddy</fullName>
                </value>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Brian Cellary</fullName>
                </value>
                <value>
                    <fullName>Chanda Lynn</fullName>
                </value>
                <value>
                    <fullName>Colin Troy</fullName>
                </value>
                <value>
                    <fullName>Jessica Drago</fullName>
                </value>
                <value>
                    <fullName>Karrie Campos</fullName>
                </value>
                <value>
                    <fullName>Matt Cincogrono</fullName>
                </value>
                <value>
                    <fullName>Matt Dunphy</fullName>
                </value>
                <value>
                    <fullName>Mike O&apos;Sullivan</fullName>
                </value>
                <value>
                    <fullName>Ralph Johnson</fullName>
                </value>
                <value>
                    <fullName>Richie Webber</fullName>
                </value>
                <value>
                    <fullName>Ron Shippert</fullName>
                </value>
                <value>
                    <fullName>Saul Kane</fullName>
                </value>
                <value>
                    <fullName>Spenser Rose</fullName>
                </value>
                <value>
                    <fullName>Stephanie King</fullName>
                </value>
                <value>
                    <fullName>Tamara Kirby</fullName>
                </value>
                <value>
                    <fullName>Thomas Hernandez</fullName>
                </value>
                <value>
                    <fullName>Tim Kavanaugh</fullName>
                </value>
                <value>
                    <fullName>Tracie Duitch</fullName>
                </value>
                <value>
                    <fullName>Tyler Forsberg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referred To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Housing_Cost__c</fullName>
        <label>Rent/Housing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Pre_Admissions_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Pre-Admissions Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_VOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires VOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Days_Authorized__c</fullName>
        <label>Residential Days Authorized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ring_Time__c</fullName>
        <label>Ring Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RxBin__c</fullName>
        <label>RxBin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RxPCN__c</fullName>
        <label>RxPCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC_CC__c</fullName>
        <formula>TEXT(Credit_Card_Numer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDOC CC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC_Due_Date__c</fullName>
        <formula>TODAY() + 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDOC Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Admission_Date__c</fullName>
        <label>Scheduled Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Group_Number_fr__c</fullName>
        <formula>Insurance_Verification__r.Secondary_Ins_Group_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Group_No__c</fullName>
        <label>Group No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Member_ID__c</fullName>
        <label>Member ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_DOB__c</fullName>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_Last_Name__c</fullName>
        <label>Subsciber Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_email__c</fullName>
        <label>Subscriber email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Address2__c</fullName>
        <label>Subscriber Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Address__c</fullName>
        <label>Subscriber Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Employer__c</fullName>
        <label>Subscriber Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_First_Name__c</fullName>
        <label>Subscriber First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Gender__c</fullName>
        <label>Subscriber Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Phone__c</fullName>
        <label>Subscriber Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Relationship__c</fullName>
        <label>Subscriber Relationship</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_SSN__c</fullName>
        <label>Subscriber SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Street_Address__c</fullName>
        <label>Subscriber Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_city__c</fullName>
        <label>Subscriber City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_state__c</fullName>
        <label>Subscriber state</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_zip__c</fullName>
        <label>Subscriber Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Company_fr__c</fullName>
        <formula>Insurance_Verification__r.Secondary_Insurance_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Insurance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Phone_Number__c</fullName>
        <label>Insurance Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOB Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Member_ID_Number_fr__c</fullName>
        <formula>Insurance_Verification__r.Secondary_Ins_Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Member ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Subscriber_Date_of_Birth_fr__c</fullName>
        <formula>Insurance_Verification__r.Secondary_Ins_Sub_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Subscriber Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Subscriber_Name_fr__c</fullName>
        <formula>Insurance_Verification__r.Secondary_Ins_Subscriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Subscriber Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Subscriber_Relationship_fr__c</fullName>
        <formula>Insurance_Verification__r.Secondary_Ins_relationship_to_sub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Subscriber Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_VOB_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary VOB Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_VOB_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary VOB Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Security Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Admissions_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Admission Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Refer_Outs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends an email to referouts with Face Sheet Information</description>
        <label>Send to Refer Outs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_VOB__c</fullName>
        <description>QuickVOB field readily viewable on opp layouts</description>
        <inlineHelpText>Enter Ins Conpany, ID number, DED, OOP, Coinsurance and amounts met.</inlineHelpText>
        <label>Soft VOB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_of_Outbound_Referral__c</fullName>
        <label>Status of Outbound Referral</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stipulations_Notes__c</fullName>
        <label>Stipulations/Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address2__c</fullName>
        <label>Subscriber Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address__c</fullName>
        <label>Subscriber Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_City__c</fullName>
        <label>Subscriber City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB__c</fullName>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <label>Subscriber Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subscriber_Employer__c</fullName>
        <label>Subscriber Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_First_Name__c</fullName>
        <label>Subscriber First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Gender__c</fullName>
        <label>Subscriber Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Last_Name__c</fullName>
        <label>Subscriber Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone__c</fullName>
        <label>Subscriber Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Subscriber_Relationship__c</fullName>
        <label>Subscriber Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_SSN__c</fullName>
        <label>Subscriber SSN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_State__c</fullName>
        <label>Subscriber State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Street_Address__c</fullName>
        <label>Subscriber Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Zip__c</fullName>
        <label>Subscriber Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplies__c</fullName>
        <label>Supplies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TRT_Admit_Date__c</fullName>
        <label>TRT Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRT_Discharge_Date__c</fullName>
        <label>TRT Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRT_Discharge_Type__c</fullName>
        <label>TRT Discharge Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRT_If_Insurance_Amount_to_Pay__c</fullName>
        <label>(TRT) If Insurance, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TRT_If_Private_Pay_Amount_to_Pay__c</fullName>
        <label>(TRT) If Private Pay, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TRT_Length_of_Stay__c</fullName>
        <formula>TRT_Discharge_Date__c -  TRT_Admit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRT Length of Stay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talk_Time__c</fullName>
        <label>Talk Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Agreed_To_Pay__c</fullName>
        <label>Total Agreed To Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>